# ml_dev_tools

./: .gitignore
AWML_dev_tools/compare_video_result/: README.md  pyproject.toml
AWML_dev_tools/compare_video_result/config/: base.yaml
AWML_dev_tools/compare_video_result/src/compare_video_result/: cli.py  concat_videos.py
AWML_dev_tools/rename_dataset/: .gitignore  README.md  pyproject.toml  rename_dataset.py
AWML_dev_tools/rename_dataset/config/: example.yaml
