[project]
name = "rename-dataset"
version = "0.1.0"
description = "Dataset renaming tool"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "PyYAML>=6.0",
]
authors = [
    {name = "Shin-kyoto"},
]

[project.scripts]
rename-dataset = "rename_dataset:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py37']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
